fix(core/navigation): fix navigation missing gap in submenu group items

--- a/packages/core/src/navigation/_navigation-styles.scss
+++ b/packages/core/src/navigation/_navigation-styles.scss
@@ -144,7 +144,10 @@ $icon-size: 24px !default;
       }
 
       &__group {
+        display: grid;
         padding-left: $vertical-group-indent;
+        gap: spacing.level(2);
+        margin-top: spacing.level(2);
 
         .#{$item-prefix} {
           height: $vertical-item-height;
